--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ https://templatemo.com/tm-573-eduwell
                   <nav class="main-nav">
                       <!-- ***** Logo Start ***** -->
                       <a href="index.html" class="logo">
-                          <img src="assets/images/templatemo-eduwell.png" alt="EduWell Template">
+                          <img src="assets/images/Aileen-Fusana.png" alt="Aileen-Fusana">
                       </a>
                       <!-- ***** Logo End ***** -->
                       <!-- ***** Menu Start ***** -->
@@ -77,7 +77,7 @@ https://templatemo.com/tm-573-eduwell
         <div class="col-lg-6 align-self-center">
           <div class="header-text">
             <!--<h6>Welcome to our school</h6>-->
-            <h2>Ailee Fusana <em>Senior QA Analyst</em></h2>
+            <h2>Aileen Fusana <em>Senior QA Analyst</em></h2>
             <div class="main-button-gradient">
               <div class="scroll-to-section"><a href="#contact-section">HIRE ME</a></div>
             </div>
