--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ https://templatemo.com/tm-573-eduwell
                   <nav class="main-nav">
                       <!-- ***** Logo Start ***** -->
                       <a href="index.html" class="logo">
-                          <img src="assets/images/Aileen-Fusana.png" alt="Aileen-Fusana">
+                          <img src="assets/images/Aileen-Fusana.png" alt="Aileen-Fusana" width="20" height="15">
                       </a>
                       <!-- ***** Logo End ***** -->
                       <!-- ***** Menu Start ***** -->
