--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ https://templatemo.com/tm-573-eduwell
                   <nav class="main-nav">
                       <!-- ***** Logo Start ***** -->
                       <a href="index.html" class="logo">
-                          <img src="assets/images/Aileen-Fusana.png" alt="Aileen-Fusana" width="20" height="15">
+                          <!--<img src="assets/images/Aileen-Fusana.png" alt="Aileen-Fusana">-->
                       </a>
                       <!-- ***** Logo End ***** -->
                       <!-- ***** Menu Start ***** -->
@@ -99,7 +99,8 @@ https://templatemo.com/tm-573-eduwell
         <div class="col-lg-12">
           <div class="section-heading">
             <h3>ABOUT ME</h3>
-            <p>With over six years of hands-on experience in the field.
+            <link rel="stylesheet" href="styles.css">
+            <p class="about-me">With over six years of hands-on experience in the field.
 Throughout my career, I’ve had the opportunity to work with 
 
 diverse teams across local and international projects both in
