--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@ in QA.</p>
                           <div class="price"><h6>$128</h6></div>
                         </div>
                         <div class="right-content">
-                          <h4>Web Development</h4>
+                          <h4>Web App Testing</h4>
                           <p>As a Senior QA Analyst, my approach to testing web applications is both systematic and user-focused.  
                           <br><br> I begin by thoroughly understanding the application’s requirements, user personas, and business
                            goals to ensure my testing aligns with project objectives.</p>
