--- a/my-journey.html
+++ b/my-journey.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:100,200,300,400,500,600,700,800,900" rel="stylesheet">
 
-    <title>EduWell - Education HTML5 Template</title>
+    <title>My Journey</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -40,20 +40,18 @@ https://templatemo.com/tm-573-eduwell
                 <nav class="main-nav">
                   <!-- ***** Logo Start ***** -->
                   <a href="index.html" class="logo">
-                      <img src="assets/images/templatemo-eduwell.png" alt="EduWell Template">
+                      <img src="" alt="">
                   </a>
                   <!-- ***** Logo End ***** -->
                   <!-- ***** Menu Start ***** -->
                   <ul class="nav">
                     <li><a href="index.html" class="active">Home</a></li>
-                    <li><a href="index.html">Services</a></li>
-                    <li><a href="index.html">Courses</a></li>
+                    <!--<li><a href="index.html">Services</a></li>-->
                     <li class="has-sub">
                         <a href="javascript:void(0)">Pages</a>
                         <ul class="sub-menu">
-                            <li><a href="about-us.html">About Us</a></li>
-                            <li><a href="our-services.html">Our Services</a></li>
-                            <li><a href="contact-us.html">Contact Us</a></li>
+                            <li><a href="my-journey.html">My Journey</a></li>
+                            <li><a href="my-personal-blog.html">My Personal Blog</a></li>
                         </ul>
                     </li>
                     <li><a href="index.html">Testimonials</a></li> 
@@ -75,8 +73,8 @@ https://templatemo.com/tm-573-eduwell
       <div class="row">
         <div class="col-lg-12">
           <div class="header-text">
-            <h4>More About Us</h4>
-            <h1>About Us</h1>
+            <h4>About My Journey</h4>
+            <h1>My journey in assuring the softwares quality</h1>
           </div>
         </div>
       </div>
@@ -93,9 +91,16 @@ https://templatemo.com/tm-573-eduwell
         </div>
         <div class="col-lg-6 align-self-center">
           <div class="section-heading">
-            <h6>Get info</h6>
-            <h4>Read More <em>About Us</em></h4>
-            <p>You are allowed 100% to download and use our templates from TemplateMo for your commercial or business websites. You are <strong>not allowed</strong> to redistribute this template ZIP file on any other website without a permission from us.<br><br>There are some unethical people on this planet earth who copied our templates so easily without any permission from us and then reposted on their websites. Their Karma will hit them really hard. Yeah, that is right.</p>
+            <h4>My Journey as a <em>Senior QA Analyst</em></h4>
+            <p>Embarking on a career in Quality Assurance has been a rewarding journey of growth, 
+              learning, and discovery. Over the years, I’ve honed my skills in ensuring software excellence, 
+              collaborating with diverse teams, and adapting to ever-evolving technologies.
+              From mastering manual testing techniques to leading automation initiatives with 
+              tools like Playwright and Postman, my path has been driven by a passion for delivering 
+              seamless user experiences. Each project has not only strengthened my technical expertise but 
+              also deepened my understanding of the critical role QA plays in the software development lifecycle. 
+              This is a reflection of the challenges, milestones, and lessons that have shaped me into the 
+              Senior QA Analyst I am today.</p>
           </div>
           <div class="row">
             <div class="col-lg-6">
@@ -103,8 +108,18 @@ https://templatemo.com/tm-573-eduwell
                 <div class="icon">
                   <img src="assets/images/service-icon-01.png" alt="">
                 </div>
-                <h4>Best Strategy</h4>
-                <p>Food & truck tumeric taxidermy hoodie chiasore bitters retroed gentrify street portland.</p>
+                <h4>QA Strategy Principles</h4>
+                <p>The best QA strategy depends on the context of the project,
+                   but an effective strategy typically involves a mix of planning, execution,
+                  communication, and continuous improvement.</p><br><hr>
+                  <ul>
+                    <li><strong>Shift Left:</strong> Start testing early in the development cycle to catch defects sooner.</li><hr>
+                    <li><strong>User-Centric Approach:</strong> Test from the perspective of the end-user to ensure usability and satisfaction.</li><hr>
+                    <li><strong>Test Early, Test Often: </strong>Adopt Agile and DevOps principles to ensure continuous testing
+                    throughout the lifecycle.</li><br><hr>
+                  </ul>
+                  <p>By following these steps and customizing them to your project’s needs, 
+                    you can build a QA strategy that ensures high-quality deliverables and aligns with business objectives.</p><hr>
               </div>
             </div>
             <div class="col-lg-6">
@@ -112,8 +127,21 @@ https://templatemo.com/tm-573-eduwell
                 <div class="icon">
                   <img src="assets/images/service-icon-02.png" alt="">
                 </div>
-                <h4>Creative Ideas</h4>
-                <p>Food & truck tumeric taxidermy hoodie chiasore bitters retroed gentrify street portland.</p>
+                <h4>Importance of SDLC</h4>
+                <p>The <strong>Software Development Life Cycle (SDLC)</strong> is crucial for ensuring
+                  the systematic and efficient development of high-quality software. </p><br><hr>
+                  <ul>
+                    <li>SDLC breaks down the software development 
+                      process into manageable phases,
+                      ensuring a clear roadmap from initiation to deployment. It identifies and eliminates defects,
+                       leading to a stable, reliable, and high-performing product.
+                    </li><hr>
+                    <li>SDLC is the backbone of effective software development. It provides a structured, repeatable,
+                       and scalable process that ensures quality, reduces risks, and aligns software solutions with
+                       business objectives. By following the SDLC, teams can deliver successful projects that meet
+                       user expectations and business goals.</li><hr>
+                    
+                  </ul>
               </div>
             </div>
           </div>
@@ -391,17 +419,17 @@ https://templatemo.com/tm-573-eduwell
         </div>
         <div class="col-lg-12">
           <ul class="social-icons">
-            <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-            <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-            <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-            <li><a href="#"><i class="fa fa-rss"></i></a></li>
-            <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
+            <li><a href="https://www.facebook.com/yenpfusana/" target="_blank" title="Facebook"><i class="fa fa-facebook"></i></a></li>
+            <li><a href="https://www.linkedin.com/in/aileen-fusana/" target="_blank" title="Linkedin"><i class="fa fa-linkedin"></i></a></li>
+            <li><a href="https://github.com/yenyen123" target="_blank" title="Github"><i class="fa fa-github" ></i></a></li>
+            <li><a href="https://ph.jobstreet.com/profile/aileen-fusana-KVTCqTbGGH" target="_blank" title="Jobstreet"><i class="fa fa-briefcase"></i></a></li>
+            <li><a href="#"><i class="fa fa-instagram"></i></a></li>
           </ul>
         </div>
         <div class="col-lg-12">
-          <p class="copyright">Copyright © 2022 EduWell Co., Ltd. All Rights Reserved. 
+          <p class="copyright">Copyright © 2024 Aileen Fusana Portfolio. 
           
-          <br>Design: <a rel="sponsored" href="https://templatemo.com" target="_blank">TemplateMo</a></p>
+          <br>Designed By: <a rel="sponsored" href="https://templatemo.com" target="_blank">Aileen Fusana</a></p>
         </div>
       </div>
     </div>
