--- a/my-personal-blog.html
+++ b/my-personal-blog.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:100,200,300,400,500,600,700,800,900" rel="stylesheet">
 
-    <title>EduWell - Education HTML5 Template</title>
+    <title>My Personal Blog</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -38,20 +38,17 @@ https://templatemo.com/tm-573-eduwell
                 <nav class="main-nav">
                   <!-- ***** Logo Start ***** -->
                   <a href="index.html" class="logo">
-                      <img src="assets/images/templatemo-eduwell.png" alt="EduWell Template">
+                      <img src="" alt="">
                   </a>
                   <!-- ***** Logo End ***** -->
                   <!-- ***** Menu Start ***** -->
                   <ul class="nav">
                     <li><a href="index.html" class="active">Home</a></li>
-                    <li><a href="index.html">Services</a></li>
-                    <li><a href="index.html">Courses</a></li>
                     <li class="has-sub">
                         <a href="javascript:void(0)">Pages</a>
                         <ul class="sub-menu">
-                            <li><a href="about-us.html">About Us</a></li>
-                            <li><a href="our-services.html">Our Services</a></li>
-                            <li><a href="contact-us.html">Contact Us</a></li>
+                            <li><a href="my-journey.html">My Journey</a></li>
+                            <li><a href="my-personal-blog.html">My Personal Blog</a></li>
                         </ul>
                     </li>
                     <li><a href="index.html">Testimonials</a></li> 
@@ -73,8 +70,7 @@ https://templatemo.com/tm-573-eduwell
       <div class="row">
         <div class="col-lg-12">
           <div class="header-text">
-            <h4>What We Do</h4>
-            <h1>Our Services</h1>
+            <h1>My Personal Blog</h1>
           </div>
         </div>
       </div>
@@ -86,8 +82,7 @@ https://templatemo.com/tm-573-eduwell
       <div class="row">
         <div class="col-lg-12">
           <div class="section-heading">
-            <h6>Our Services</h6>
-            <h4>Provided <em>Services</em></h4>
+            <h4>My <em>Personal Blog</em></h4>
           </div>
         </div>
         <div class="col-lg-12">
@@ -211,13 +206,21 @@ https://templatemo.com/tm-573-eduwell
       <div class="row">
         <div class="col-lg-5 offset-lg-1">
           <div class="left-image">
-            <img src="assets/images/cta-left-image.png" alt="">
+            <img src="assets/images/garfie.jpg" alt="">
           </div>
         </div>
         <div class="col-lg-5 align-self-center">
-          <h6>Get the sale right now!</h6>
-          <h4>Up to 50% OFF For 1+ courses</h4>
-          <p>Kogi VHS freegan bicycle rights try-hard green juice probably haven't heard of them cliche la croix af chillwave.</p>
+          <h6>Get to know me</h6>
+          <h4>Me as a QA, a furmom, and a full time mom</h4>
+          <p>Hi there! I’m Aileen, or you can call me <em>"Yen"</em>, a dedicated QA professional with a passion for ensuring seamless user experiences in the tech world. But when I’m not immersed in testing software, 
+            I’m embracing my favorite roles as a loving furmom to my four adorable cats and a mom who enjoys 
+            cooking delicious meals for my kid.
+            This blog is a blend of my professional and personal passions—sharing stories 
+            from the tech world, my adventures in the kitchen, and the joy of caring for my furry family. 
+            Whether it’s tips on quality assurance, tales of my cats' quirky antics, or recipes my kid can’t get enough of, you’ll find it all here.
+            Thank you for visiting—I can’t wait to share more of my journey with you!
+            
+            </p>
           <div class="white-button">
             <a href="contact-us.html">View Courses</a>
           </div>
@@ -231,8 +234,7 @@ https://templatemo.com/tm-573-eduwell
       <div class="row">
         <div class="col-lg-12">
           <div class="section-heading">
-            <h6>Featured Service</h6>
-            <h4>Best Of Our <em>Product</em></h4>
+            <h4>Best of my <em>Furbabies</em></h4>
           </div>
         </div>
         <div class="col-lg-3 align-self-center">
@@ -259,7 +261,7 @@ https://templatemo.com/tm-573-eduwell
         </div>
         <div class="col-lg-6">
           <div class="product-image">
-            <img src="assets/images/featured-product.jpg" alt="">
+            <img src="assets/images/featured-product.png" alt="">
           </div>
         </div>
         <div class="col-lg-3 align-self-center">
@@ -309,7 +311,7 @@ https://templatemo.com/tm-573-eduwell
               <li>- Scenester normcore mumblecore snackwave.</li>
             </ul>
             <div class="main-button-gradient">
-              <a href="our-services.html">Our Services</a>
+              <a href="#">My Personal Blog</a>
             </div>
           </div>
         </div>
@@ -325,17 +327,17 @@ https://templatemo.com/tm-573-eduwell
         </div>
         <div class="col-lg-12">
           <ul class="social-icons">
-            <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-            <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-            <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-            <li><a href="#"><i class="fa fa-rss"></i></a></li>
-            <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
+            <li><a href="https://www.facebook.com/yenpfusana/" target="_blank" title="Facebook"><i class="fa fa-facebook"></i></a></li>
+            <li><a href="https://www.linkedin.com/in/aileen-fusana/" target="_blank" title="Linkedin"><i class="fa fa-linkedin"></i></a></li>
+            <li><a href="https://github.com/yenyen123" target="_blank" title="Github"><i class="fa fa-github" ></i></a></li>
+            <li><a href="https://ph.jobstreet.com/profile/aileen-fusana-KVTCqTbGGH" target="_blank" title="Jobstreet"><i class="fa fa-briefcase"></i></a></li>
+            <li><a href="#"><i class="fa fa-instagram"></i></a></li>
           </ul>
         </div>
         <div class="col-lg-12">
-          <p class="copyright">Copyright © 2022 EduWell Co., Ltd. All Rights Reserved. 
+          <p class="copyright">Copyright © 2024 Aileen Fusana Portfolio. 
           
-          <br>Design: <a rel="sponsored" href="https://templatemo.com" target="_blank">TemplateMo</a></p>
+          <br>Designed By: <a rel="sponsored" href="https://templatemo.com" target="_blank">Aileen Fusana</a></p>
         </div>
       </div>
     </div>
