--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
                       <!-- ***** Logo End ***** -->
                       <!-- ***** Menu Start ***** -->
                       <ul class="nav">
-                          <!--<li class="scroll-to-section"><a href="#top" class="active">Home</a></li>-->
+                          <li class="scroll-to-section"><a href="#top" class="active">Home</a></li>
                           <li class="scroll-to-section"><a href="#services">About Me</a></li>
                           <li class="scroll-to-section"><a href="#courses">My Expertise</a></li>
                           <li class="has-sub">
                               <a href="javascript:void(0)">My Pages</a>
                               <ul class="sub-menu">
-                                  <li><a href="about-us.html">My Journey</a></li>
-                                  <li><a href="our-services.html">My Personal Blog</a></li>
+                                  <li><a href="my-journey.html">My Journey</a></li>
+                                  <li><a href="my-personal-blog.html">My Personal Blog</a></li>
                                   <!--<li><a href="contact-us.html">Contact Me</a></li>-->
                               </ul>
                           </li>
@@ -123,8 +123,12 @@ in QA.</p>
                 <div class="icon">
                   <img src="assets/images/service-icon-01.png" alt="">
                 </div>
-                <h4>Useful Tricks</h4>
-                <p>EduWell is the professional HTML5 template for your school or university websites.</p>
+                <h4>Detail-Oriented
+                  Testing Expertise</h4>
+                <p>Proven ability to identify
+                  subtle bugs and issues
+                  through meticulous
+                  testing.</p>
               </div>
             </div>
             <div class="item">
@@ -132,8 +136,10 @@ in QA.</p>
                 <div class="icon">
                   <img src="assets/images/service-icon-02.png" alt="">
                 </div>
-                <h4>Creative Ideas</h4>
-                <p>You can download and use this EduWell Template for your teaching and learning stuffs.</p>
+                <h4>SDLC methodologies</h4>
+                <p>Proficient in SDLC frameworks and processes.Expertise in various
+                  testing methodologies
+                  and tools.</p>
               </div>
             </div>
             <div class="item">
@@ -141,8 +147,11 @@ in QA.</p>
                 <div class="icon">
                   <img src="assets/images/service-icon-03.png" alt="">
                 </div>
-                <h4>Ready Target</h4>
-                <p>Please tell your friends about the best CSS template website that is TemplateMo.</p>
+                <h4>Strong Analytical Skills</h4>
+                <p>Ability to analyze complex
+                  systems and understand
+                  how changes impact the
+                  software.</p>
               </div>
             </div>
             <div class="item">
@@ -150,8 +159,11 @@ in QA.</p>
                 <div class="icon">
                   <img src="assets/images/service-icon-04.png" alt="">
                 </div>
-                <h4>Technology</h4>
-                <p>Aenean bibendum consectetur ex eu porttitor. Pellentesque id ultrices metus.</p>
+                <h4>Proven Track Record of Improvement</h4>
+                <p>Demonstrated ability to
+                  enhance testing
+                  processes and quality
+                  outcomes.</p>
               </div>
             </div>
             <div class="item">
@@ -159,8 +171,13 @@ in QA.</p>
                 <div class="icon">
                   <img src="assets/images/service-icon-01.png" alt="">
                 </div>
-                <h4>Useful Tricks</h4>
-                <p>In non nisi eget magna efficitur ultricies non quis sapien. Pellentesque tellus.</p>
+                <h4>Commitment to
+                  Continuous
+                  Learning</h4>
+                <p>Dedication to staying
+                  current with industry
+                  trends and emerging
+                  technologies.</p>
               </div>
             </div>
             <div class="item">
@@ -168,62 +185,11 @@ in QA.</p>
                 <div class="icon">
                   <img src="assets/images/service-icon-02.png" alt="">
                 </div>
-                <h4>Creative Ideas</h4>
-                <p>Aenean bibendum consectetur ex eu porttitor. Pellentesque id ultrices metus.</p>
-              </div>
-            </div>
-            <div class="item">
-              <div class="service-item">
-                <div class="icon">
-                  <img src="assets/images/service-icon-03.png" alt="">
-                </div>
-                <h4>Ready Target</h4>
-                <p>In non nisi eget magna efficitur ultricies non quis sapien. Pellentesque tellus.</p>
-              </div>
-            </div>
-            <div class="item">
-              <div class="service-item">
-                <div class="icon">
-                  <img src="assets/images/service-icon-04.png" alt="">
-                </div>
-                <h4>Technology</h4>
-                <p>Aenean bibendum consectetur ex eu porttitor. Pellentesque id ultrices metus.</p>
-              </div>
-            </div>
-            <div class="item">
-              <div class="service-item">
-                <div class="icon">
-                  <img src="assets/images/service-icon-01.png" alt="">
-                </div>
-                <h4>Useful Tricks</h4>
-                <p>In non nisi eget magna efficitur ultricies non quis sapien. Pellentesque tellus.</p>
-              </div>
-            </div>
-            <div class="item">
-              <div class="service-item">
-                <div class="icon">
-                  <img src="assets/images/service-icon-02.png" alt="">
-                </div>
-                <h4>Creative Ideas</h4>
-                <p>Aenean bibendum consectetur ex eu porttitor. Pellentesque id ultrices metus.</p>
-              </div>
-            </div>
-            <div class="item">
-              <div class="service-item">
-                <div class="icon">
-                  <img src="assets/images/service-icon-03.png" alt="">
-                </div>
-                <h4>Ready Target</h4>
-                <p>In non nisi eget magna efficitur ultricies non quis sapien. Pellentesque tellus.</p>
-              </div>
-            </div>
-            <div class="item">
-              <div class="service-item">
-                <div class="icon">
-                  <img src="assets/images/service-icon-04.png" alt="">
-                </div>
-                <h4>Technology</h4>
-                <p>Praesent accumsan condimentum arcu, id porttitor est semper nec. Nunc diam lorem.</p>
+                <h4>Effective Communication Skills.</h4>
+                <p>Ability to clearly document
+                  issues and communicate
+                  effectively with
+                  development teams.</p>
               </div>
             </div>
           </div>
@@ -263,7 +229,7 @@ in QA.</p>
                       <div>
                         <div class="left-image">
                           <img src="assets/images/courses-01.jpg" alt="">
-                          <div class="price"><h6>$128</h6></div>
+                          <!--<div class="price"><h6>$128</h6></div>-->
                         </div>
                         <div class="right-content">
                           <h4>Web App Testing</h4>
@@ -274,7 +240,7 @@ in QA.</p>
                           <span>4 Weeks</span>
                           <span class="last-span">3 Certificates</span>-->
                           <div class="text-button">
-                            <a href="contact-us.html">Read more</a>
+                            <a href="webapp-testing.html">Read more</a>
                           </div>
                         </div>
                       </div>
@@ -294,7 +260,7 @@ in QA.</p>
                           <span>6 Weeks</span>
                           <span class="last-span">1 Certificate</span>-->
                           <div class="text-button">
-                            <a href="contact-us.html">Read more</a>
+                            <a href="mobile-app-testing.html">Read more</a>
                           </div>
                         </div>
                       </div>
@@ -310,7 +276,7 @@ in QA.</p>
                           <p>As a Senior QA Analyst, manual testing is at the core of my ability to ensure software quality by directly interacting with the application to validate its functionality, <br>
                           <br>usability, and reliability. My approach is detail-oriented, user-focused, and adaptable to the unique needs of each project.</p>
                           <div class="text-button">
-                            <a href="contact-us.html">Read more</a>
+                            <a href="manual-testing.html">Read more</a>
                           </div>
                         </div>
                       </div>
@@ -326,7 +292,7 @@ in QA.</p>
                           <p>As a Senior QA Analyst, I leverage automation to enhance testing efficiency, accuracy, and coverage, ensuring consistent software quality across releases. <br>
                           <br>With tools like Playwright for UI automation and Postman for API testing, I focus on creating robust, maintainable, and scalable automated test suites.</p>
                           <div class="text-button">
-                            <a href="contact-us.html">Read more</a>
+                            <a href="automated-testing.html">Read more</a>
                           </div>
                         </div>
                       </div>
@@ -350,7 +316,7 @@ in QA.</p>
           </div>
         </div>
         <div class="col-lg-5 align-self-center">
-          <h6>Get the sale right now!</h6>
+          <h5>Companies I've worked with</h5>
           <h4>Up to 50% OFF For 1+ courses</h4>
           <p>Kogi VHS freegan bicycle rights try-hard green juice probably haven't heard of them cliche la croix af chillwave.</p>
           <div class="white-button">
@@ -361,7 +327,7 @@ in QA.</p>
     </div>
   </section>
 
-  <section class="testimonials" id="testimonials">
+ <!-- <section class="testimonials" id="testimonials">
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
@@ -424,7 +390,7 @@ in QA.</p>
         </div>
       </div>
     </div>
-  </section>
+  </section>-->
 
   <section class="contact-us" id="contact-section">
     <div class="container">
@@ -494,7 +460,7 @@ in QA.</p>
             <li><a href="https://www.linkedin.com/in/aileen-fusana/" target="_blank" title="Linkedin"><i class="fa fa-linkedin"></i></a></li>
             <li><a href="https://github.com/yenyen123" target="_blank" title="Github"><i class="fa fa-github" ></i></a></li>
             <li><a href="https://ph.jobstreet.com/profile/aileen-fusana-KVTCqTbGGH" target="_blank" title="Jobstreet"><i class="fa fa-briefcase"></i></a></li>
-            <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
+            <li><a href="#"><i class="fa fa-instagram"></i></a></li>
           </ul>
         </div>
         <div class="col-lg-12">
