--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <!--<h6>Welcome to our school</h6>-->
             <h2>Aileen Fusana <em>Senior QA Analyst</em></h2>
             <div class="main-button-gradient">
-              <div class="scroll-to-section"><a href="#contact-section">HIRE ME</a></div>
+              <div class="scroll-to-section"><a href="https://www.linkedin.com/in/aileen-fusana/" target="_blank">HIRE ME</a></div>
             </div>
           </div>
         </div>
