--- a/my-journey.html
+++ b/my-journey.html
@@ -46,7 +46,8 @@ https://templatemo.com/tm-573-eduwell
                   <!-- ***** Menu Start ***** -->
                   <ul class="nav">
                     <li><a href="index.html" class="active">Home</a></li>
-                    <!--<li><a href="index.html">Services</a></li>-->
+                    <li><a href="index.html">About Me</a></li>
+                    <li><a href="index.html">My Expertise</a></li>
                     <li class="has-sub">
                         <a href="javascript:void(0)">Pages</a>
                         <ul class="sub-menu">
@@ -54,8 +55,8 @@ https://templatemo.com/tm-573-eduwell
                             <li><a href="my-personal-blog.html">My Personal Blog</a></li>
                         </ul>
                     </li>
-                    <li><a href="index.html">Testimonials</a></li> 
-                    <li><a href="index.html">Contact Us</a></li> 
+                    <!--<li><a href="index.html">Testimonials</a></li>--> 
+                    <li><a href="#">Contact Me</a></li> 
                 </ul>         
                   <a class='menu-trigger'>
                       <span>Menu</span>
