--- a/my-personal-blog.html
+++ b/my-personal-blog.html
@@ -222,7 +222,7 @@ https://templatemo.com/tm-573-eduwell
             
             </p>
           <div class="white-button">
-            <a href="contact-us.html">View Courses</a>
+            <a href="#">View More</a>
           </div>
         </div>
       </div>
@@ -234,26 +234,28 @@ https://templatemo.com/tm-573-eduwell
       <div class="row">
         <div class="col-lg-12">
           <div class="section-heading">
-            <h4>Best of my <em>Furbabies</em></h4>
+            <h4>When your QA is <em>Off Duty</em></h4>
           </div>
         </div>
         <div class="col-lg-3 align-self-center">
           <div class="left-info">
             <div class="col-lg-12">
               <div class="info-item">
+                <img src="assets/images/coffee-1322869_1280.jpg" alt="">
                 <div class="icon">
-                  <img src="assets/images/service-icon-01.png" alt="">
+                  <!--<img src="assets/images/service-icon-01.png" alt="">-->
                 </div>
-                <h4>Best Strategy</h4>
+                <h4>Enjoying the best Coffee</h4>
                 <p>Food & truck tumeric taxidermy hoodie chiasore bitters retroed gentrify street portland.</p>
               </div>
             </div>
             <div class="col-lg-12">
               <div class="info-item last-info">
+                <img src="assets/images/spaghetti-6639970_640.jpg" alt="">
                 <div class="icon">
-                  <img src="assets/images/service-icon-01.png" alt="">
+                  <!--<img src="assets/images/service-icon-01.png" alt="">-->
                 </div>
-                <h4>Best Strategy</h4>
+                <h4>Preparing food for the family</h4>
                 <p>Food & truck tumeric taxidermy hoodie chiasore bitters retroed gentrify street portland.</p>
               </div>
             </div>
@@ -268,19 +270,19 @@ https://templatemo.com/tm-573-eduwell
           <div class="right-info">
             <div class="col-lg-12">
               <div class="info-item">
+                <img src="assets/images/Piggy.jpg" alt="">
                 <div class="icon">
-                  <img src="assets/images/service-icon-01.png" alt="">
                 </div>
-                <h4>Best Strategy</h4>
+                <h4>Spending time with furbabies</h4>
                 <p>Food & truck tumeric taxidermy hoodie chiasore bitters retroed gentrify street portland.</p>
               </div>
             </div>
             <div class="col-lg-12">
               <div class="info-item last-info">
+                <img src="assets/images/watch-movie.jpg" alt="">
                 <div class="icon">
-                  <img src="assets/images/service-icon-01.png" alt="">
                 </div>
-                <h4>Best Strategy</h4>
+                <h4>Movie time with family</h4>
                 <p>Food & truck tumeric taxidermy hoodie chiasore bitters retroed gentrify street portland.</p>
               </div>
             </div>
@@ -296,19 +298,20 @@ https://templatemo.com/tm-573-eduwell
         <div class="col-lg-4">
           <div class="left-info">
             <div class="section-heading">
-              <h6>Our Office</h6>
-              <h4>Get closer to <em>EduWell</em></h4>
+              <h4>My<em> Space</em></h4>
             </div>
-            <p>Trust fund nocore broklyn humblebrag mustache
-              pork kitsch, bicycle rights hexagon schlitz keytar palo is
-              santo drinking vinegar fam ramps. <br><br>Four dollar toast and
-              edison bulb vinyl, listicle hashtag pug scenester typewrit
-              er yuccie street artboard or whatever to fill place.</p>
+            <p>My four adorable cats, my constant companions, play a huge role in helping me stay calm and focused.
+               Their playful antics, soothing purrs, and unconditional love create a peaceful environment that melts 
+               away stress after a long day of testing and debugging. Caring for them teaches me patience and attention 
+               to detail—qualities that directly enhance my performance as a QA. Thanks to their comforting presence, 
+               I can recharge, maintain a positive mindset, and bring my best self to every project.</p>
             <ul>
-              <li>- Selfies you probably haven't heard of them.</li>
-              <li>- Tousled cold-pressed chicharrones yuccie.</li>
-              <li>- Pabst iPhone chartreuse shabby chic tumeric.</li>
-              <li>- Scenester normcore mumblecore snackwave.</li>
+              <li>- I don’t need a Netflix subscription—watching my cats’ daily drama is entertainment enough!</li>
+              <li>- My cats think I work from home just to provide unlimited belly rubs and snacks on demand.</li>
+              <li>- Every cat in my house is an alarm clock… except they don’t have snooze buttons and love 3 a.m. wake-up calls!</li>
+              <li>- Having four cats is like living with tiny, furry managers who silently judge your every move.</li>
+              <li>- I’ve learned that privacy doesn’t exist with cats—my bathroom breaks are now group meetings.</li>
+              <li>- With four cats, every chair is a throne, and I’m just a lowly servant looking for a place to sit.</li>
             </ul>
             <div class="main-button-gradient">
               <a href="#">My Personal Blog</a>
