--- a/index.html
+++ b/index.html
@@ -312,16 +312,25 @@ in QA.</p>
       <div class="row">
         <div class="col-lg-5 offset-lg-1">
           <div class="left-image">
-            <img src="assets/images/cta-left-image.png" alt="">
+            <img src="assets/images/portfolio-image-2.png" alt="">
           </div>
         </div>
-        <div class="col-lg-5 align-self-center">
-          <h5>Companies I've worked with</h5>
-          <h4>Up to 50% OFF For 1+ courses</h4>
-          <p>Kogi VHS freegan bicycle rights try-hard green juice probably haven't heard of them cliche la croix af chillwave.</p>
-          <div class="white-button">
-            <a href="contact-us.html">View Courses</a>
-          </div>
+        <div class="col-lg-5 align-self-left">
+          <h5>Companies I've worked with</h5><hr>
+          <p><strong>MDU Solutions LLC</strong></p>
+          <p>The company specializes in ISP services, Smart Homes and Units, 
+            Digital Signage, Security Cameras, Billing and Control Platforms, 
+            Access Control, and Community WiFi, offering innovative solutions 
+            to enhance connectivity, security, and convenience.</p><hr>
+            
+          <p><strong>COR Logic Solutions</strong></p>
+          <p>Cor Logic is a premiere software company 
+             specializing in full-spectrum online logistics software. 
+             Company Album. album. Company Culture. Diverse Team.</p>
+          
+          <p><strong>Pacifi Blue IT</strong></p>
+          <p>An Online Learning Center based in Japan that also 
+            provides paralegal solutions and a range of other professional services.</p>
         </div>
       </div>
     </div>
