--- a/my-personal-blog.html
+++ b/my-personal-blog.html
@@ -51,8 +51,7 @@ https://templatemo.com/tm-573-eduwell
                             <li><a href="my-personal-blog.html">My Personal Blog</a></li>
                         </ul>
                     </li>
-                    <li><a href="index.html">Testimonials</a></li> 
-                    <li><a href="index.html">Contact Us</a></li> 
+                    <li><a href="index.html">Contact Me</a></li> 
                   </ul>     
                   <a class='menu-trigger'>
                       <span>Menu</span>
