--- a/my-journey.html
+++ b/my-journey.html
@@ -151,260 +151,30 @@ https://templatemo.com/tm-573-eduwell
     </div>
   </section>
 
-  <section class="our-team">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-6 offset-lg-3">
-          <div class="section-heading">
-            <h6>Our Team</h6>
-            <h4>Our Team <em>Members</em></h4>
-          </div>
-        </div>
-        <div class="col-lg-10 offset-lg-1">
-          <div class="naccs">
-            <div class="tabs">
-              <div class="row">
-                <div class="col-lg-12">
-                  <div class="menu">
-                    <div class="active">
-                      <img src="assets/images/team-member-thumb-01.jpg" alt="">
-                      <h4>Ruby Foster</h4>
-                      <span>CEO-FOUNDER</span>
-                    </div>
-                    <div>
-                      <img src="assets/images/team-member-thumb-03.jpg" alt="">
-                      <h4>Luis Oconnell</h4>
-                      <span>CEO-FOUNDER</span>
-                    </div>
-                    <div>
-                      <img src="assets/images/team-member-thumb-02.jpg" alt="">
-                      <h4>Jackie Riggs</h4>
-                      <span>CEO-FOUNDER</span>
-                    </div>
-                    <div>
-                      <img src="assets/images/team-member-thumb-04.jpg" alt="">
-                      <h4>Alfred Small</h4>
-                      <span>CEO-FOUNDER</span>
-                    </div>
-                    <div>
-                      <img src="assets/images/team-member-thumb-05.jpg" alt="">
-                      <h4>Denis Mitchel</h4>
-                      <span>CEO-FOUNDER</span>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-lg-12">
-                  <ul class="nacc">
-                    <li class="active">
-                      <div>
-                        <div class="left-content">
-                          <h4>Ruby Foster</h4>
-                          <p>Quinoa roof party squid prism sustainable letterpress cray hammock tumeric man bun mixtape tofu subway tile cronut. Deep v ennui subway tile organic seitan kogi freegan bicycle rights try-hard green juice probably.</p>
-                          <span><a href="#">Facebook</a></span>
-                          <span><a href="#">Twitter</a></span>
-                          <span class="last-span"><a href="#">Linkedin</a></span>
-                          <div class="text-button">
-                            <a href="contact-us.html">Contact Member</a>
-                          </div>
-                        </div>
-                        <div class="right-image">
-                          <img src="assets/images/team-member-01.jpg" alt="">
-                        </div>
-                      </div>
-                    </li>
-                    <li>
-                      <div>
-                        <div class="left-content">
-                          <h4>Luis Oconnell</h4>
-                          <p>Quinoa roof party squid prism sustainable letterpress cray hammock tumeric man bun mixtape tofu subway tile cronut. Deep v ennui subway tile organic seitan kogi freegan bicycle rights try-hard green juice probably.</p>
-                          <span><a href="#">Facebook</a></span>
-                          <span><a href="#">Twitter</a></span>
-                          <span class="last-span"><a href="#">Linkedin</a></span>
-                          <div class="text-button">
-                            <a href="contact-us.html">Contact Member</a>
-                          </div>
-                        </div>
-                        <div class="right-image">
-                          <img src="assets/images/team-member-03.jpg" alt="">
-                        </div>
-                      </div>
-                    </li>
-                    <li>
-                      <div>
-                        <div class="left-content">
-                          <h4>Jackie Riggs</h4>
-                          <p>Quinoa roof party squid prism sustainable letterpress cray hammock tumeric man bun mixtape tofu subway tile cronut. Deep v ennui subway tile organic seitan kogi freegan bicycle rights try-hard green juice probably.</p>
-                          <span><a href="#">Facebook</a></span>
-                          <span><a href="#">Twitter</a></span>
-                          <span class="last-span"><a href="#">Linkedin</a></span>
-                          <div class="text-button">
-                            <a href="contact-us.html">Contact Member</a>
-                          </div>
-                        </div>
-                        <div class="right-image">
-                          <img src="assets/images/team-member-02.jpg" alt="">
-                        </div>
-                      </div>
-                    </li>
-                    <li>
-                      <div>
-                        <div class="left-content">
-                          <h4>Alfred Small</h4>
-                          <p>Quinoa roof party squid prism sustainable letterpress cray hammock tumeric man bun mixtape tofu subway tile cronut. Deep v ennui subway tile organic seitan kogi freegan bicycle rights try-hard green juice probably.</p>
-                          <span><a href="#">Facebook</a></span>
-                          <span><a href="#">Twitter</a></span>
-                          <span class="last-span"><a href="#">Linkedin</a></span>
-                          <div class="text-button">
-                            <a href="contact-us.html">Contact Member</a>
-                          </div>
-                        </div>
-                        <div class="right-image">
-                          <img src="assets/images/team-member-04.jpg" alt="">
-                        </div>
-                      </div>
-                      </li>
-                      <li>
-                        <div>
-                          <div class="left-content">
-                            <h4>Dennis Mitchel</h4>
-                            <p>Quinoa roof party squid prism sustainable letterpress cray hammock tumeric man bun mixtape tofu subway tile cronut. Deep v ennui subway tile organic seitan kogi freegan bicycle rights try-hard green juice probably.</p>
-                            <span><a href="#">Facebook</a></span>
-                            <span><a href="#">Twitter</a></span>
-                            <span class="last-span"><a href="#">Linkedin</a></span>
-                            <div class="text-button">
-                              <a href="contact-us.html">Contact Member</a>
-                            </div>
-                          </div>
-                          <div class="right-image">
-                            <img src="assets/images/team-member-05.jpg" alt="">
-                          </div>
-                        </div>
-                        </li>
-                    </ul>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <section class="simple-cta">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-5 offset-lg-1">
-          <div class="left-image">
-            <img src="assets/images/cta-left-image.png" alt="">
-          </div>
-        </div>
-        <div class="col-lg-5 align-self-center">
-          <h6>Get the sale right now!</h6>
-          <h4>Up to 50% OFF For 1+ courses</h4>
-          <p>Kogi VHS freegan bicycle rights try-hard green juice probably haven't heard of them cliche la croix af chillwave.</p>
-          <div class="white-button">
-            <a href="contact-us.html">View Courses</a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <section class="testimonials">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-12">
-          <div class="section-heading">
-            <h6>Testimonials</h6>
-            <h4>What They <em>Think</em></h4>
-          </div>
-        </div>
-        <div class="col-lg-12">
-          <div class="owl-testimonials owl-carousel" style="position: relative; z-index: 5;">
-            <div class="item">
-              <p>“Food & truck tumeric hoodie chiasore bit-
-                ters retroed gentrify street portland.”</p>
-                <h4>Andrea Furistos</h4>
-                <span>CEO-FOUNDER</span>
-                <img src="assets/images/quote.png" alt="">
-            </div>
-            <div class="item">
-              <p>“Food & truck tumeric hoodie chiasore bit-
-                ters retroed gentrify street portland.”</p>
-                <h4>Andrea Furistos</h4>
-                <span>CEO-FOUNDER</span>
-                <img src="assets/images/quote.png" alt="">
-            </div>
-            <div class="item">
-              <p>“Food & truck tumeric hoodie chiasore bit-
-                ters retroed gentrify street portland.”</p>
-                <h4>Andrea Furistos</h4>
-                <span>CEO-FOUNDER</span>
-                <img src="assets/images/quote.png" alt="">
-            </div>
-            <div class="item">
-              <p>“Food & truck tumeric hoodie chiasore bit-
-                ters retroed gentrify street portland.”</p>
-                <h4>Andrea Furistos</h4>
-                <span>CEO-FOUNDER</span>
-                <img src="assets/images/quote.png" alt="">
-            </div>
-            <div class="item">
-              <p>“Food & truck tumeric hoodie chiasore bit-
-                ters retroed gentrify street portland.”</p>
-                <h4>Andrea Furistos</h4>
-                <span>CEO-FOUNDER</span>
-                <img src="assets/images/quote.png" alt="">
-            </div>
-            <div class="item">
-              <p>“Food & truck tumeric hoodie chiasore bit-
-                ters retroed gentrify street portland.”</p>
-                <h4>Andrea Furistos</h4>
-                <span>CEO-FOUNDER</span>
-                <img src="assets/images/quote.png" alt="">
-            </div>
-            <div class="item">
-              <p>“Food & truck tumeric hoodie chiasore bit-
-                ters retroed gentrify street portland.”</p>
-                <h4>Andrea Furistos</h4>
-                <span>CEO-FOUNDER</span>
-                <img src="assets/images/quote.png" alt="">
-            </div>
-            <div class="item">
-              <p>“Food & truck tumeric hoodie chiasore bit-
-                ters retroed gentrify street portland.”</p>
-                <h4>Andrea Furistos</h4>
-                <span>CEO-FOUNDER</span>
-                <img src="assets/images/quote.png" alt="">
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
+  
   <section class="contact-us our-office">
     <div class="container">
       <div class="row">
         <div class="col-lg-4">
           <div class="left-info">
             <div class="section-heading">
-              <h6>Our Office</h6>
-              <h4>Get closer to <em>EduWell</em></h4>
+              <h4>My<em> Space</em></h4>
             </div>
-            <p>Trust fund nocore broklyn humblebrag mustache
-              pork kitsch, bicycle rights hexagon schlitz keytar palo is
-              santo drinking vinegar fam ramps. <br><br>Four dollar toast and
-              edison bulb vinyl, listicle hashtag pug scenester typewrit
-              er yuccie street artboard or whatever to fill place.</p>
+            <p>My four adorable cats, my constant companions, play a huge role in helping me stay calm and focused.
+               Their playful antics, soothing purrs, and unconditional love create a peaceful environment that melts 
+               away stress after a long day of testing and debugging. Caring for them teaches me patience and attention 
+               to detail—qualities that directly enhance my performance as a QA. Thanks to their comforting presence, 
+               I can recharge, maintain a positive mindset, and bring my best self to every project.</p>
             <ul>
-              <li>- Selfies you probably haven't heard of them.</li>
-              <li>- Tousled cold-pressed chicharrones yuccie.</li>
-              <li>- Pabst iPhone chartreuse shabby chic tumeric.</li>
-              <li>- Scenester normcore mumblecore snackwave.</li>
+              <li>- I don’t need a Netflix subscription—watching my cats’ daily drama is entertainment enough!</li>
+              <li>- My cats think I work from home just to provide unlimited belly rubs and snacks on demand.</li>
+              <li>- Every cat in my house is an alarm clock… except they don’t have snooze buttons and love 3 a.m. wake-up calls!</li>
+              <li>- Having four cats is like living with tiny, furry managers who silently judge your every move.</li>
+              <li>- I’ve learned that privacy doesn’t exist with cats—my bathroom breaks are now group meetings.</li>
+              <li>- With four cats, every chair is a throne, and I’m just a lowly servant looking for a place to sit.</li>
             </ul>
             <div class="main-button-gradient">
-              <a href="our-services.html">Our Services</a>
+              <a href="#">My Personal Blog</a>
             </div>
           </div>
         </div>
