newly modified files

--- a/my-personal-blog.html
+++ b/my-personal-blog.html
@@ -44,6 +44,8 @@ https://templatemo.com/tm-573-eduwell
                   <!-- ***** Menu Start ***** -->
                   <ul class="nav">
                     <li><a href="index.html" class="active">Home</a></li>
+                    <li class="scroll-to-section"><a href="index.html">About Me</a></li>
+                          <li class="scroll-to-section"><a href="index.html">My Expertise</a></li>
                     <li class="has-sub">
                         <a href="javascript:void(0)">Pages</a>
                         <ul class="sub-menu">
