additional file modification

--- a/my-personal-blog.html
+++ b/my-personal-blog.html
@@ -83,125 +83,9 @@ https://templatemo.com/tm-573-eduwell
       <div class="row">
         <div class="col-lg-12">
           <div class="section-heading">
-            <h4>My <em>Personal Blog</em></h4>
+            <h4>Get to <em>Know ME</em></h4>
           </div>
         </div>
-        <div class="col-lg-12">
-          <div class="owl-service-item owl-carousel">
-            <div class="item">
-              <div class="service-item">
-                <div class="icon">
-                  <img src="assets/images/service-icon-01.png" alt="">
-                </div>
-                <h4>Useful Tricks</h4>
-                <p>Food & truck tumeric taxidermy hoodie chiasore bitters retroed gentrify street portland.</p>
-              </div>
-            </div>
-            <div class="item">
-              <div class="service-item">
-                <div class="icon">
-                  <img src="assets/images/service-icon-02.png" alt="">
-                </div>
-                <h4>Creative Ideas</h4>
-                <p>Food & truck tumeric taxidermy hoodie chiasore bitters retroed gentrify street portland.</p>
-              </div>
-            </div>
-            <div class="item">
-              <div class="service-item">
-                <div class="icon">
-                  <img src="assets/images/service-icon-03.png" alt="">
-                </div>
-                <h4>Ready Target</h4>
-                <p>Food & truck tumeric taxidermy hoodie chiasore bitters retroed gentrify street portland.</p>
-              </div>
-            </div>
-            <div class="item">
-              <div class="service-item">
-                <div class="icon">
-                  <img src="assets/images/service-icon-04.png" alt="">
-                </div>
-                <h4>Technology</h4>
-                <p>Food & truck tumeric taxidermy hoodie chiasore bitters retroed gentrify street portland.</p>
-              </div>
-            </div>
-            <div class="item">
-              <div class="service-item">
-                <div class="icon">
-                  <img src="assets/images/service-icon-01.png" alt="">
-                </div>
-                <h4>Useful Tricks</h4>
-                <p>Food & truck tumeric taxidermy hoodie chiasore bitters retroed gentrify street portland.</p>
-              </div>
-            </div>
-            <div class="item">
-              <div class="service-item">
-                <div class="icon">
-                  <img src="assets/images/service-icon-02.png" alt="">
-                </div>
-                <h4>Creative Ideas</h4>
-                <p>Food & truck tumeric taxidermy hoodie chiasore bitters retroed gentrify street portland.</p>
-              </div>
-            </div>
-            <div class="item">
-              <div class="service-item">
-                <div class="icon">
-                  <img src="assets/images/service-icon-03.png" alt="">
-                </div>
-                <h4>Ready Target</h4>
-                <p>Food & truck tumeric taxidermy hoodie chiasore bitters retroed gentrify street portland.</p>
-              </div>
-            </div>
-            <div class="item">
-              <div class="service-item">
-                <div class="icon">
-                  <img src="assets/images/service-icon-04.png" alt="">
-                </div>
-                <h4>Technology</h4>
-                <p>Food & truck tumeric taxidermy hoodie chiasore bitters retroed gentrify street portland.</p>
-              </div>
-            </div>
-            <div class="item">
-              <div class="service-item">
-                <div class="icon">
-                  <img src="assets/images/service-icon-01.png" alt="">
-                </div>
-                <h4>Useful Tricks</h4>
-                <p>Food & truck tumeric taxidermy hoodie chiasore bitters retroed gentrify street portland.</p>
-              </div>
-            </div>
-            <div class="item">
-              <div class="service-item">
-                <div class="icon">
-                  <img src="assets/images/service-icon-02.png" alt="">
-                </div>
-                <h4>Creative Ideas</h4>
-                <p>Food & truck tumeric taxidermy hoodie chiasore bitters retroed gentrify street portland.</p>
-              </div>
-            </div>
-            <div class="item">
-              <div class="service-item">
-                <div class="icon">
-                  <img src="assets/images/service-icon-03.png" alt="">
-                </div>
-                <h4>Ready Target</h4>
-                <p>Food & truck tumeric taxidermy hoodie chiasore bitters retroed gentrify street portland.</p>
-              </div>
-            </div>
-            <div class="item">
-              <div class="service-item">
-                <div class="icon">
-                  <img src="assets/images/service-icon-04.png" alt="">
-                </div>
-                <h4>Technology</h4>
-                <p>Food & truck tumeric taxidermy hoodie chiasore bitters retroed gentrify street portland.</p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
   <section class="simple-cta">
     <div class="container">
       <div class="row">
@@ -247,7 +131,7 @@ https://templatemo.com/tm-573-eduwell
                   <!--<img src="assets/images/service-icon-01.png" alt="">-->
                 </div>
                 <h4>Enjoying the best Coffee</h4>
-                <p>Food & truck tumeric taxidermy hoodie chiasore bitters retroed gentrify street portland.</p>
+                <p>Sipping on the best coffee, savoring every moment of peace and relaxation—because even a QA needs a perfectly brewed break!</p>
               </div>
             </div>
             <div class="col-lg-12">
@@ -257,7 +141,7 @@ https://templatemo.com/tm-573-eduwell
                   <!--<img src="assets/images/service-icon-01.png" alt="">-->
                 </div>
                 <h4>Preparing food for the family</h4>
-                <p>Food & truck tumeric taxidermy hoodie chiasore bitters retroed gentrify street portland.</p>
+                <p>Switching from testing apps to testing recipes—crafting delicious meals that bring joy to the family table! </p>
               </div>
             </div>
           </div>
@@ -275,7 +159,7 @@ https://templatemo.com/tm-573-eduwell
                 <div class="icon">
                 </div>
                 <h4>Spending time with furbabies</h4>
-                <p>Food & truck tumeric taxidermy hoodie chiasore bitters retroed gentrify street portland.</p>
+                <p>Trading keyboards for cuddles—cherishing every moment with my adorable furbabies who never fail to brighten my day!</p>
               </div>
             </div>
             <div class="col-lg-12">
@@ -284,7 +168,7 @@ https://templatemo.com/tm-573-eduwell
                 <div class="icon">
                 </div>
                 <h4>Movie time with family</h4>
-                <p>Food & truck tumeric taxidermy hoodie chiasore bitters retroed gentrify street portland.</p>
+                <p>Kicking back with the family and enjoying a good movie—because even the best testers need a little popcorn and screen time!</p>
               </div>
             </div>
           </div>
@@ -314,9 +198,6 @@ https://templatemo.com/tm-573-eduwell
               <li>- I’ve learned that privacy doesn’t exist with cats—my bathroom breaks are now group meetings.</li>
               <li>- With four cats, every chair is a throne, and I’m just a lowly servant looking for a place to sit.</li>
             </ul>
-            <div class="main-button-gradient">
-              <a href="#">My Personal Blog</a>
-            </div>
           </div>
         </div>
         <div class="col-lg-8">
