changes in color and otehr modification

--- a/my-personal-blog.html
+++ b/my-personal-blog.html
@@ -95,7 +95,6 @@ https://templatemo.com/tm-573-eduwell
           </div>
         </div>
         <div class="col-lg-5 align-self-center">
-          <h6>Get to know me</h6>
           <h4>Me as a QA, a furmom, and a full time mom</h4>
           <p>Hi there! I’m Aileen, or you can call me <em>"Yen"</em>, a dedicated QA professional with a passion for ensuring seamless user experiences in the tech world. But when I’m not immersed in testing software, 
             I’m embracing my favorite roles as a loving furmom to my four adorable cats and a mom who enjoys 
@@ -107,7 +106,7 @@ https://templatemo.com/tm-573-eduwell
             
             </p>
           <div class="white-button">
-            <a href="#">View More</a>
+            <a href="blog-view-more.html">View More</a>
           </div>
         </div>
       </div>
