changes in color and otehr modification

--- a/index.html
+++ b/index.html
@@ -73,7 +73,9 @@
             <!--<h6>Welcome to our school</h6>-->
             <h2>Aileen Fusana <em>Senior QA Analyst</em></h2>
             <div class="main-button-gradient">
-              <div class="scroll-to-section"><a href="https://www.linkedin.com/in/aileen-fusana/" target="_blank">HIRE ME</a></div>
+              <div class="scroll-to-section"><!--<a href="https://www.linkedin.com/in/aileen-fusana/" target="_blank" title="Linkedin">HIRE ME</a>-->
+              </div>
+            <ul><li><a href="https://www.linkedin.com/in/aileen-fusana/" target="_blank" title="Linkedin">Hire Me</a></li></ul>
             </div>
           </div>
         </div>
@@ -328,7 +330,7 @@ in QA.</p>
              specializing in full-spectrum online logistics software. 
              Company Album. album. Company Culture. Diverse Team.</p><hr>
           
-          <p style="font-size: 20px;"><strong>Pacifi Blue IT (Feb 2018 - Jan 2021)</strong><br>
+          <p ><strong>Pacifi Blue IT (Feb 2018 - Jan 2021)</strong><br>
             An Online Learning Center based in Japan that also 
             provides paralegal solutions and a range of other professional services.</p><hr>
         </div>
