--- a/index.html
+++ b/index.html
@@ -319,18 +319,19 @@ in QA.</p>
         </div>
         <div class="col-lg-5 align-self-left">
           <p style="font-size: 25px;"><strong>Companies I've worked with</strong></p><hr>
-          <p style="font-size: 20px;"><strong>MDU Solutions LLC (Aug 2022 - Jan 2025)</strong><br>
+
+          <p style="font-size: 19px;"><strong>MDU Solutions LLC (Aug 2022 - Jan 2025)</strong><br>
             The company specializes in ISP services, Smart Homes and Units, 
             Digital Signage, Security Cameras, Billing and Control Platforms, 
             Access Control, and Community WiFi, offering innovative solutions 
             to enhance connectivity, security, and convenience.</p><hr>
 
-          <p style="font-size: 20px;"><strong>COR Logic Solutions (Jan 2021 - Aug 2022)</strong><br>
+          <p style="font-size: 19px;"><strong>COR Logic Solutions (Jan 2021 - Aug 2022)</strong><br>
              Cor Logic is a premiere software company 
              specializing in full-spectrum online logistics software. 
              Company Album. album. Company Culture. Diverse Team.</p><hr>
           
-          <p ><strong>Pacifi Blue IT (Feb 2018 - Jan 2021)</strong><br>
+          <p style="font-size: 19px;" ><strong>Pacifi Blue IT (Feb 2018 - Jan 2021)</strong><br>
             An Online Learning Center based in Japan that also 
             provides paralegal solutions and a range of other professional services.</p><hr>
         </div>
