changes in color and otehr modification

--- a/my-journey.html
+++ b/my-journey.html
@@ -179,7 +179,7 @@ https://templatemo.com/tm-573-eduwell
             <div class="thumb">
               <img src="assets/images/video-thumb.jpg" alt="">
               <div class="play-button">
-                <a rel="nofollow" href="https://www.youtube.com/templatemo" target="_blank"><i class="fa fa-play"></i></a>
+                <!--<a href="#http://youtube.com" target="_blank"><i class="fa fa-play"></i></a>-->
               </div>
             </div>
           </div>
