--- a/my-personal-blog.html
+++ b/my-personal-blog.html
@@ -204,7 +204,7 @@ https://templatemo.com/tm-573-eduwell
             <div class="thumb">
               <img src="assets/images/video-thumb.jpg" alt="">
               <div class="play-button">
-                <a href="http://youtube.com" target="_blank"><i class="fa fa-play"></i></a>
+                <!--<a href="#http://youtube.com" target="_blank"><i class="fa fa-play"></i></a>-->
               </div>
             </div>
           </div>
